[package]
name = "aptos-client"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0" }
serde_json = { version = "1.0" }
ureq = { version = "2.5", features = ["json"] }

aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
