[package]
name = "aptos-client"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0" }
serde_json = { version = "1.0" }

aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }

# For compiling natively:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "2.5", features = ["json"] }

# For compiling to web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3.52"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]
